# covid19-bayleaf

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: 4536329244-download.sh
data/test_data/: GC1SG1_20200516D08D_T0727_L2SG_LAI_Q_1000.h5
experiments/: experiment.py  experiment_hdf4.ipynb  experimet_time_series.ipynb  trends.ipynb
input_data/: GC1SG1_20200508A08D_T0014_L2SG_RV08Q_1000.h5  MCD15A3H.A2019209.h26v06.006.2019214040331.hdf  MCD15A3H.A2019213.h28v06.006.2019218033849.hdf  MCD15A3H.A2019273.h27v07.006.2019282172300.hdf  MCD15A3H.A2020033.h27v07.006.2020038232740.hdf
src/: data_by_api.py  data_loader.py  make_fig.py  make_fig_trend.py  test_h5-checkpoint.ipynb  test_h5.ipynb  test_hdf.py
