[tool.poetry]
name = "covid19_bayleaf"
version = "0.1.0"
description = ""
authors = ["Masashi Sode <masashi.sode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
autopep8 = "^1.5.2"
category-encoders = "^2.2.2"
lightgbm = "^2.3.1"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
pandas = "^1.0.3"
seaborn = "^0.10.1"
catboost = "^0.23.2"
scikit-learn = "^0.23.1"
tqdm = "^4.46.0"
jupyterlab = "^2.1.3"
jupyter = "^1.0.0"
optuna = "^1.4.0"
torch = "^1.5.0"
h5py = "^2.10.0"
python-hdf4 = "^0.9.2"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
isort = "^4.3.21"
autopep8 = "^1.5.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
